--- a/gptme.toml
+++ b/gptme.toml
@@ -1,5 +1,5 @@
 prompt = "This is gptme"
-files = ["README.md"]
+#files = ["README.md"]
 #files = ["README.md", "Makefile", "gptme/cli.py", "docs/*.rst", "docs/*.md"]
 
 [rag]
